force-app/main/default/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Curr_Cont_Prediction_Level__c</fullName>
        <formula>Contact.Curr_Cont_Prediction_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Outlook Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentStudent__c</fullName>
        <description>[??] - Describes whether student affiliation on the Contact record is current or not.</description>
        <formula>ISPICKVAL(Contact.Affiliation_Student__c, 'Current')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <description>[??] - How the customer was feeling when he enter the support case.</description>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) =="")  ,"" ,IMAGE( "resource/pkb_mobile/imgs/"+TEXT( Customer_emoticon_value__c ) +".png" ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>[??] - Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>confused</fullName>
                </value>
                <value>
                    <fullName>annoyed</fullName>
                </value>
                <value>
                    <fullName>frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deep_Links__c</fullName>
        <label>Deep Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_AS_Processing_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send AS Processing Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_student_plan_to_return_to_ASU__c</fullName>
        <description>For use on Retention Outreach Close Case Layout</description>
        <label>Does the student plan to return to ASU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>Required on Closed Case Layout for Coaches only</description>
        <label>Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Attempted Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalated_From__c</fullName>
        <description>Picklist that allows users to select where a case was escalated from.</description>
        <inlineHelpText>If the case was escalated from a different department, please indicate the department here.</inlineHelpText>
        <label>Escalated From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni - Admin Asst</fullName>
                </value>
                <value>
                    <fullName>CD Director</fullName>
                </value>
                <value>
                    <fullName>Exec Director</fullName>
                </value>
                <value>
                    <fullName>Frontline</fullName>
                </value>
                <value>
                    <fullName>Fulton - Receptionist</fullName>
                </value>
                <value>
                    <fullName>Presidents - Const Comm Coord</fullName>
                </value>
                <value>
                    <fullName>Provost - Coord Sr</fullName>
                </value>
                <value>
                    <fullName>Sr VP Ed Outreach - Admin Asst</fullName>
                </value>
                <value>
                    <fullName>Vice Provost - Admin Asst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Followup_Date__c</fullName>
        <label>Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forward_Case_Comments__c</fullName>
        <description>[??] - Any text entered here will be included in the email sent to a unit or individual when this Case is "Closed: Forwarded".</description>
        <inlineHelpText>Any text entered here will be included in the email sent to a unit or individual when this Case is "Closed: Forwarded".</inlineHelpText>
        <label>Forward Case Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forward_Case_Contact_Email__c</fullName>
        <description>The contact's email address</description>
        <formula>Contact.Email</formula>
        <inlineHelpText>The contact's email address</inlineHelpText>
        <label>Forward Case Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_Case_Contact_Phone__c</fullName>
        <description>The contact's preferred phone number, if the preferred communication method is a phone number.</description>
        <formula>IF(Contact.DoNotCall, '', CASE(TEXT(Contact.Contact_Preference__c), 'Home Phone', Contact.HomePhone, 'Mobile Phone', Contact.MobilePhone, 'Local Phone', Contact.OtherPhone, ''))</formula>
        <inlineHelpText>The contact's phone number, if the preferred communication method is a phone number.</inlineHelpText>
        <label>Forward Case Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_To_Email_Calculation__c</fullName>
        <description>[??] - A list of emails associated with the "Forward Case To Department". If the "Forward Case To Email" is left blank, it is automatically populated with this address.</description>
        <formula>IF(CONTAINS(TEXT(Forward_To_Unit__c),"@")
,
MID(TEXT(Forward_To_Unit__c),
FIND("(",TEXT(Forward_To_Unit__c))+1,
LEN(TEXT(Forward_To_Unit__c)) - FIND("(",TEXT(Forward_To_Unit__c))-1)
,"")</formula>
        <inlineHelpText>A list of emails associated with the "Forward Case To Department". If the "Forward Case To Email" is left blank, it is automatically populated with this address.</inlineHelpText>
        <label>Forward To Email Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_To_Email__c</fullName>
        <description>[??] - For most "Forward To Units" this email will be automatically provided. If forwarding to "Other Unit" an to an Individual, this field is required.</description>
        <inlineHelpText>For most "Forward To Units" this email will be automatically provided. If forwarding to "Other Unit" an to an Individual, this field is required.</inlineHelpText>
        <label>Forward To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>When creating a new case, Functional Group should be your own group. To transfer this case, click on the Change link in the Case Owner field and select a queue.</description>
        <inlineHelpText>When creating a new case, Functional Group should be your own group. To transfer this case, click on the Change link in the Case Owner field and select a queue.</inlineHelpText>
        <label>Functional Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Academic Transfer Credit Solutions</fullName>
                </value>
                <value>
                    <fullName>Access ASU Outreach</fullName>
                </value>
                <value>
                    <fullName>Admission Services</fullName>
                </value>
                <value>
                    <fullName>American Indian Student Support Services</fullName>
                </value>
                <value>
                    <fullName>ASU Advisor Outreach</fullName>
                </value>
                <value>
                    <fullName>ASU Coach Outreach</fullName>
                </value>
                <value>
                    <fullName>ASU Colleges at Lake Havasu</fullName>
                </value>
                <value>
                    <fullName>ASU Online</fullName>
                </value>
                <value>
                    <fullName>ASU Salesforce Support</fullName>
                </value>
                <value>
                    <fullName>ASU-USA Pathways</fullName>
                </value>
                <value>
                    <fullName>ASU Wellness</fullName>
                </value>
                <value>
                    <fullName>Biosafety</fullName>
                </value>
                <value>
                    <fullName>Blackboard UTO</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Changemaker Central</fullName>
                </value>
                <value>
                    <fullName>CISA - UC Community Outreach</fullName>
                </value>
                <value>
                    <fullName>CLAS - Air Force ROTC</fullName>
                </value>
                <value>
                    <fullName>CLAS - AIS</fullName>
                </value>
                <value>
                    <fullName>CLAS - Army ROTC</fullName>
                </value>
                <value>
                    <fullName>CLAS - English</fullName>
                </value>
                <value>
                    <fullName>CLAS - HDSHC</fullName>
                </value>
                <value>
                    <fullName>CLAS - ISSR</fullName>
                </value>
                <value>
                    <fullName>CLAS - Navy ROTC</fullName>
                </value>
                <value>
                    <fullName>CLAS - Physics</fullName>
                </value>
                <value>
                    <fullName>CLAS - Psychology</fullName>
                </value>
                <value>
                    <fullName>CLAS - SCETL</fullName>
                </value>
                <value>
                    <fullName>CLAS - SESE</fullName>
                </value>
                <value>
                    <fullName>CLAS - SGSUP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Contact.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Illegal_Characters_In_Outbound_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[??] - Set to TRUE (via Workflow) if an Email is sent containing illegal characters (e.g. the "&lt;&lt;" in a Email Template that indicate a staff member should fill out missing information.</description>
        <inlineHelpText>Set to TRUE (via Workflow) if an Email is sent containing illegal characters (e.g. the "&lt;&lt;" in a Email Template that indicate a staff member should fill out missing information.</inlineHelpText>
        <label>Illegal Characters In Outbound Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Contact_Id__c</fullName>
        <description>Syncs inContact reports with Salesforce Case Id</description>
        <label>In Contact Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Interaction_Date__c</fullName>
        <inlineHelpText>The date and time this Case Contact was first considered an Inbound Interaction. Set via Workflow.</inlineHelpText>
        <label>Inbound Interaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inbound_Interaction_Stage__c</fullName>
        <inlineHelpText>The Stage of the associated Opportunity at the time this Case was first considered an Inbound Interaction.  Set via Workflow.</inlineHelpText>
        <label>Inbound Interaction Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Interaction_Term__c</fullName>
        <inlineHelpText>The term of the associated Opportunity, at the time this Case was first considered an Inbound Interaction.  Set via Workflow.</inlineHelpText>
        <label>Inbound Interaction Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Interaction_Type__c</fullName>
        <inlineHelpText>The Type of the associated Opportunity at the time this Case Contact was first considered an Inbound Interaction.  Set via Workflow.</inlineHelpText>
        <label>Inbound Interaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Interaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to True if and when this Case Contact is considered a Touch Point.</inlineHelpText>
        <label>Inbound Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Request_Sent_To_Addresses__c</fullName>
        <description>[??] - If this case was created because a customer sent an email to one of ASU's service addresses, all addresses that initial email was sent to are stored here. The email addresses here are what CARs use for inbound emails.</description>
        <inlineHelpText>If this case was created because a customer sent an email to one of ASU's service addresses, all addresses that initial email was sent to are stored here. The email addresses here are what CARs use for inbound emails.</inlineHelpText>
        <label>Initial Request Sent To Addresses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intended_Recipient__c</fullName>
        <description>The email address of the intended recipient of an inbound email message.</description>
        <inlineHelpText>The email address of the intended recipient of an inbound email message.</inlineHelpText>
        <label>Intended Recipient</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Logged_in_User_Territory_Manager__c</fullName>
        <description>Formula field that marks checkbox as TRUE if the logged in user ID matches the Opportunity Owner ID field. It assists with a "My Cases" list view.</description>
        <formula>IF($User.Id =  Opportunity__r.Owner.Id, True, False)</formula>
        <label>Is Logged in User Territory Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Private_to_Functional_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Checked, Case is only visible to members in the case's Functional Group.</description>
        <inlineHelpText>When Checked, Case is only visible to members in the case's Functional Group.</inlineHelpText>
        <label>Is Private to Functional Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Date__c</fullName>
        <description>Allows users to see when a case comment was last made (from a list view or portal grid).</description>
        <label>Last Comment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Functional_Group__c</fullName>
        <label>Most Recent Functional Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Outlook_Change_Direction__c</fullName>
        <formula>Contact.Most_Recent_Outlook_Change_Direction__c</formula>
        <label>Most Recent Outlook Change Direction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Queue__c</fullName>
        <label>Most Recent Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Attention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field indicating if the case was created via the "Needs Attention" process.</description>
        <label>Needs Attention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Files__c</fullName>
        <description>Used to count the number of RFI submissions related to this case.</description>
        <label>Number of Files</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Security_Case__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Open Security Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <description>Set to true if the Case is listed as the "Prospect Case" on the associated opportunity.</description>
        <formula>Id  = Opportunity__r.Prospect_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set to true if the Case is listed as the "Prospect Case" on the associated opportunity.</inlineHelpText>
        <label>Opportunity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Location__c</fullName>
        <description>Display the location on the opportunity. If the admitted location is populated, use that value, else use the location field.</description>
        <formula>IF( ISBLANK( Opportunity__r.Admitted_Location__r.Name ), Opportunity__r.Location__r.Name, Opportunity__r.Admitted_Location__r.Name)</formula>
        <label>Opportunity Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_s_Full_Name__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + " " + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner's Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_s_Pone__c</fullName>
        <formula>Opportunity__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner's Pone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_s_Recruiter_Email__c</fullName>
        <formula>Opportunity__r.Owner.Recruiter_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner's Recruiter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_s_Title__c</fullName>
        <formula>Opportunity__r.Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner's Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Formula field that displays the associated Opportunity Stage.  Field used for case list views as well as workflow rule criteria.</description>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_TA_Last_Rule_Type__c</fullName>
        <description>Displays the Territory Assignment Last Rule Type from the associated Opportunity. This shows the last type of auto territory assignment rule matched, and can be used to help identify Cases that may not need to be worked by their Owner.</description>
        <formula>TEXT(Opportunity__r.Territory_Assignment_Last_Rule_Type__c)</formula>
        <inlineHelpText>Displays the Territory Assignment Last Rule Type from the associated Opportunity. This shows the last type of auto territory assignment rule matched, and can be used to help identify Cases that may not need to be worked by their Owner.</inlineHelpText>
        <label>Opportunity TA Last Rule Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Term__c</fullName>
        <formula>Opportunity__r.Term__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Formula field that will display the type of Opportunity (e.g., Transfer, First Time Freshman, Graduate) based on the related Opportunity to the Case.  Used for list views and prioritization of case management.</description>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Opportunity object to be able to relate the case to a prospect or applicant opportunity record.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>[Manual, Automated] -  Where was this Case initiated? Dependent on Functional Group.  Examples include; Advising Community, BBSS, Email, Incoming Call, In Person, My ASU, Orientation, Outgoing Call, Web</description>
        <inlineHelpText>Where was this Case initiated?</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advising Community</fullName>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>BBSS</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Error Logger</fullName>
                </value>
                <value>
                    <fullName>ESM</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>FC DPC</fullName>
                </value>
                <value>
                    <fullName>FC Poly</fullName>
                </value>
                <value>
                    <fullName>FC Tempe</fullName>
                </value>
                <value>
                    <fullName>FC West</fullName>
                </value>
                <value>
                    <fullName>Help Desk</fullName>
                </value>
                <value>
                    <fullName>Incoming Call</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>My ASU</fullName>
                </value>
                <value>
                    <fullName>Orientation</fullName>
                </value>
                <value>
                    <fullName>Outgoing Call</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Pitch</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Student Profile</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>U.S. Mail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Category__c</fullName>
        <description>Capture the original category when the case was created.</description>
        <inlineHelpText>Original category when the case was created.</inlineHelpText>
        <label>Original Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Functional_Group__c</fullName>
        <description>The functional group value on case record when created.</description>
        <inlineHelpText>Original functional group value when the case was created.</inlineHelpText>
        <label>Original Functional Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Sub_Category__c</fullName>
        <description>Capture the original sub-category when the case was created.</description>
        <inlineHelpText>Original sub-category when the case was created.</inlineHelpText>
        <label>Original Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parature_Details__c</fullName>
        <description>[??] - Open text field for additional Parature fields not directly mapped to Salesforce fields.</description>
        <inlineHelpText>Open text field for additional Parature fields not directly mapped to Salesforce fields.</inlineHelpText>
        <label>Parature Details</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Peoplesoft] - Reflects the plan that the case is related to at the time of the case creation.</description>
        <inlineHelpText>Reflects the plan that the case is related to at the time of the case creation for Advisor Outreach cases.</inlineHelpText>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possible_Recruitment_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Recruitment Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prev_Cont_Prediction_Level__c</fullName>
        <formula>Contact.Prev_Cont_Prediction_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Outlook Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private_Note_ASU_Online__c</fullName>
        <description>[??] - Private notes are visible only to ASU Online team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to ASU Online team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - ASU Online</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Business__c</fullName>
        <description>[??] - Private Note for Business</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Business agents, only.</inlineHelpText>
        <label>Private Note - Business</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Design_and_the_Arts__c</fullName>
        <description>Private Note for Design and the Arts</description>
        <inlineHelpText>Private Note for Design and the Arts</inlineHelpText>
        <label>Private Note - Design and the Arts</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_ESM_Online__c</fullName>
        <description>[??] - Private notes are visible only to ESM Online team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to ESM Online team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - ESM Online</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Education__c</fullName>
        <description>[??] - Private Note for Education (Teachers College)</description>
        <inlineHelpText>This text area is for private notes that are to be viewable and editable by Education (Teachers College) agents, only.</inlineHelpText>
        <label>Private Note - Education</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_CIDSE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - CIDSE</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE CIDSE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering CIDSE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_Dean_s_Office__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - Dean's Office.</description>
        <inlineHelpText>Private notes are visible and editable only to Fulton Schools of Engineering - Dean's Office team members and any other user who has been given explicit permission to view, and /or edit.</inlineHelpText>
        <label>Private Note - Engineering Dean's Office</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_ECEE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - ECEE</description>
        <inlineHelpText>Private notes are visible and editable only to FSE ECEE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering ECEE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_GOEE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - GOEE</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE GOEE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering GOEE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_Poly__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - Polytechnic School</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE Polytechnic School team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering Poly</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Engineering_SBHSE__c</fullName>
        <description>Private Note area for Fulton Schools of Engineering - SBHSE</description>
        <inlineHelpText>This Private Note area is visible and editable only to FSE SBHSE team members and any other user who has been given explicit permission to view, and/or edit.</inlineHelpText>
        <label>Private Note - Engineering SBHSE</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>